--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "promise": "^7.1.1",
     "request": "^2.76.0",
     "rework": "^1.0.1",
+    "shrinkwrap": "^0.4.0",
     "unzip2": "^0.2.5"
   }
 }
